--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "angular2-quickstart",
-  "version": "1.0.0",
+  "name": "MMJ",
+  "version": "0.0.1",
   "scripts": {
+    "build": "webpack --progress",
+    "build-prd": "webpack -p --progress",
+    "serve": "webpack-dev-server --inline --progress",
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "lite": "lite-server",
     "postinstall": "typings install",
-    "tsc": "tsc",
+    "tsc": "tsc --rootDir . --outDir dist",
     "tsc:w": "tsc -w",
     "typings": "typings"
   },
@@ -32,8 +35,12 @@
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
+    "html-webpack-plugin": "^2.22.0",
     "lite-server": "^2.2.2",
+    "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
-    "typings": "^1.3.2"
+    "typings": "^1.3.2",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   }
 }
