--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
+    "css-loader": "^0.25.0",
     "html-webpack-plugin": "^2.22.0",
+    "isomorphic-style-loader": "^1.0.0",
     "lite-server": "^2.2.2",
+    "postcss-loader": "^0.13.0",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
     "typings": "^1.3.2",
